--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -84,8 +84,9 @@
       <!-- FOOTER END -->
 
       <!-- script for hamburger menu -->
-      <script src="../scripts/index.js"></script>
-      <script src="../scripts/card-lists.js"></script>
+      <!-- <script src="../scripts/navigation.js"></script>
+      <script src="../scripts/card-lists.js"></script> -->
+      <script src="../scripts/index.js" type="module"></script>
     </div>
   </body>
 </html>
