--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- basic responsive setting -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="../styles/main.css" /> -->
+    <link rel="stylesheet" href="../styles/main.css" />
     <link rel="icon" href="../public/images/heros/hero-image_1.jpg" />
     <title>FoodFinder/></title>
   </head>
@@ -82,11 +82,8 @@
         </p>
       </footer>
       <!-- FOOTER END -->
-
-      <!-- script for hamburger menu -->
-      <!-- <script src="../scripts/navigation.js"></script>
-      <script src="../scripts/card-lists.js"></script> -->
-      <!-- <script src="../scripts/index.js" type="module"></script> -->
     </div>
+
+    <script src="../scripts/index.js"></script>
   </body>
 </html>
