--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- basic responsive setting -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/main.css" />
-    <link rel="icon" href="../public/images/heros/hero-image_1.jpg" />
+    <!-- <link rel="stylesheet" href="../styles/main.css" /> -->
+    <!-- <link rel="icon" href="../public/images/heros/hero-image_1.jpg" /> -->
     <title>FoodFinder/></title>
   </head>
   <body>
@@ -52,7 +52,7 @@
           <div class="hero-image">
             <img
               tabindex="0"
-              src="../public/images/heros/hero-image_1.jpg"
+              src="images/heros/hero-image_1.jpg"
               alt="hero image"
             />
           </div>
@@ -84,6 +84,6 @@
       <!-- FOOTER END -->
     </div>
 
-    <script src="../scripts/index.js"></script>
+    <!-- <script src="../scripts/index.js"></script> -->
   </body>
 </html>
