--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- basic responsive setting -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="../styles/main.css" /> -->
-    <!-- <link rel="icon" href="../public/images/heros/hero-image_1.jpg" /> -->
+    <meta
+      name="description"
+      content="Web app yang memberikan solusi mencari restoran berkualitas di Indonesia"
+    />
     <title>FoodFinder/></title>
   </head>
   <body>
-    <a href="#cards" class="skip-to-content">Skip to Content</a>
+    <a href="#cards" id="skip">Skip to Content</a>
     <div class="wrapper">
       <!-- NAVBAR START -->
       <header id="navbar">
@@ -21,7 +23,12 @@
           </div>
           <!-- col 2, navigasi menu -->
           <div class="hamburger-menu">
-            <button id="hamburger" name="hamburger" type="button">
+            <button
+              id="hamburger"
+              name="hamburger"
+              type="button"
+              aria-label="open hamburger menu"
+            >
               <span></span>
               <span></span>
               <span></span>
@@ -29,13 +36,14 @@
             <!-- float nav-menu -->
             <nav id="nav-menu" class="hidden">
               <ul>
-                <li><a href="#" class="home">Home</a></li>
+                <li><a href="/" class="home">Home</a></li>
                 <li><a href="#" class="favorite">Favorite</a></li>
                 <li>
                   <a
                     href="https://www.linkedin.com/in/noprizal"
                     target="_blank"
                     class="aboutus"
+                    rel="noreferrer"
                     >About Us</a
                   >
                 </li>
@@ -71,19 +79,35 @@
 
       <!-- SHORTCUT TO TOP -->
       <div class="to-top">
-        <a href="#">🔝</a>
+        <a href="#">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-arrow-up-circle"
+            width="48"
+            height="48"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="#64748b"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <circle cx="12" cy="12" r="9" />
+            <line x1="12" y1="8" x2="8" y2="12" />
+            <line x1="12" y1="8" x2="12" y2="16" />
+            <line x1="16" y1="12" x2="12" y2="8" />
+          </svg>
+        </a>
       </div>
 
       <!-- FOOTER START -->
       <footer id="footer">
-        <p class="footer-title" tabindex="0">
-          Copyright &copy; 2022 -
-          <a href="https://www.instagram.com/_kkbwk" tabindex="0">Noprizal</a>
-        </p>
+        <div class="footer-title" tabindex="0">
+          Copyright &copy; 2022 - Noprizal
+        </div>
       </footer>
       <!-- FOOTER END -->
     </div>
-
-    <!-- <script src="../scripts/index.js"></script> -->
   </body>
 </html>
