--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,5 @@
+/* VIEWPORT DEFAULT FOR MOBILE */
+
 /* import font 'roboto' from google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
@@ -41,7 +43,7 @@ body {
 }
 .brand a {
   font-weight: 700;
-  font-size: 1.15rem /* 18px */;
+  font-size: 1.5rem /* 18px */;
   line-height: 1.75rem /* 28px */;
   color: var(--primary-color);
   text-decoration: none;
@@ -110,12 +112,12 @@ button span:nth-child(3) {
   padding-bottom: 1.25rem /* 20px */;
   background-color: rgb(255 255 255);
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  border-radius: 0.5rem /* 8px */;
+  border-radius: 0.6rem /* 8px */;
   max-width: 250px;
   width: 100%;
   right: 1rem;
   top: 100%;
-  /* border: 2px solid black; */
+  border: solid 0.5px var(--secondary-color);
 }
 #nav-menu ul {
   display: block;
@@ -140,14 +142,14 @@ button span:nth-child(3) {
   position: fixed;
   z-index: 9999;
   background-color: white;
-  opacity: 0.92;
+  opacity: 0.95;
   backdrop-filter: blur(10px);
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
 
 /* hero */
 #hero {
-  margin-top: 5rem;
+  margin-top: 3.1rem;
 }
 .container {
   width: 100%;
@@ -160,9 +162,10 @@ button span:nth-child(3) {
   width: 100%;
   height: 100%;
 }
+
 /* cards */
 #cards .cards-title {
-  margin-top: 3rem;
+  margin-top: 2.5rem;
   margin-bottom: 2.5rem;
   text-align: center;
   font-weight: 700;
@@ -174,7 +177,7 @@ button span:nth-child(3) {
   width: 100%;
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: 2.5rem;
+  margin-bottom: 3rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
@@ -182,7 +185,7 @@ button span:nth-child(3) {
   border-radius: 0.475rem;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   overflow: hidden;
-  margin-bottom: 1.6rem;
+  margin-bottom: 1.8rem;
 }
 .card img {
   width: 100%;
@@ -197,6 +200,9 @@ button span:nth-child(3) {
   font-size: 1.125rem /* 18px */;
   line-height: 1.75rem /* 28px */;
   margin-bottom: 0.5rem /* 8px */;
+  color: #334155;
+}
+.card-name a {
   color: #334155;
 }
 .card-rating {
@@ -229,47 +235,44 @@ button span:nth-child(3) {
     0 14px 16px -14px rgb(0 0 0 / 0.1);
   cursor: pointer;
 }
+a {
+  text-decoration: none;
+}
 
 /* footer */
-#footer {
-  background-color: var(--primary-color);
-  color: white;
-  height: 50px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+footer {
+  padding: 16px;
 }
-.footer-title div {
-  font-size: 0.9rem;
-  width: 100%;
+footer p {
+  margin-top: 16px;
+  text-align: center;
+  color: #aaaaaa;
 }
-.footer-title a {
-  font-size: 1rem;
-  width: 44px;
-  height: 44px;
+footer p a {
+  color: var(--primary-color);
   text-decoration: none;
-  color: white;
 }
 
 /* shortcut to top */
-.to-top {
+#to-top {
+  display: flex;
+  justify-content: center;
   position: fixed;
-  right: 1rem;
-  bottom: 3.7rem;
+  right: 1.1rem;
+  bottom: 3.9rem;
   background-color: transparent;
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(12px);
   border-radius: 50%;
-  padding-left: 0.2rem;
+  padding-left: 0.19rem;
   padding-right: 0.35rem;
   padding-top: 0.2rem;
-  padding-bottom: 0.3rem;
+  padding-bottom: 0.4rem;
   transition: all 0.4s;
 }
-.to-top:hover {
+#to-top:hover {
   transform: translateY(10px);
 }
-.to-top a {
+#to-top a {
   display: block;
   text-decoration: none;
   width: 44px;
@@ -283,95 +286,44 @@ button span:nth-child(3) {
   padding: 0.5rem 1rem;
   background-color: var(--primary-color);
   color: white;
-  border-radius: 5px;
+  border-radius: 3px;
   position: absolute;
   top: 4.4rem;
   left: 1.5rem;
   z-index: 99999999;
 }
-
-/* RESPONSIVE VIEWPORT */
-
-/* sm - phone landscape */
-@media (min-width: 640px) {
-  #cards .cards-wrapper {
-    max-width: 640px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem /* 24px */;
-    justify-content: space-evenly;
-  }
-  .cards-wrapper .card {
-    margin-bottom: 0px;
-    width: 16rem /* 256px */;
-  }
+/* detail-movie */
+.detail-restaurant {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 800px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 18px 50px;
 }
-/* md - tablet */
-@media (min-width: 768px) {
-  /* navbar */
-  .brand a {
-    font-size: 1.6rem;
-  }
-
-  /* cards */
-  #cards .cards-wrapper {
-    max-width: 768px;
-  }
-  #cards .cards-title {
-    margin-bottom: 3rem;
-  }
-  .cards-wrapper .card {
-    width: 20rem /* 320px */;
-  }
+.detail-restaurant .detail-poster {
+  width: 100%;
+  max-width: 400px;
+  border-radius: 7px;
+  transition: all 500ms;
 }
-/* lg - desktop */
-@media (min-width: 1024px) {
-  /* navbar */
-  .brand a {
-    font-size: 1.8rem;
-  }
-  .hamburger-menu button {
-    display: none;
-  }
-  #nav-menu {
-    display: block;
-    position: static;
-    background-color: transparent;
-    max-width: 100%;
-    border-radius: 0px;
-    box-shadow: 0 0 #0000;
-  }
-  #nav-menu ul {
-    display: flex;
-  }
-
-  /* hero */
-  .hero-image {
-    width: 100%;
-    height: 90vh;
-  }
-  /* cards */
-  .cards-wrapper .card {
-    width: 18rem /* 288px */;
-  }
+.detail-restaurant .detail-poster:hover {
+  opacity: 0.9;
 }
-/* xl - desktop or bigger than desktop*/
-@media (min-width: 1200px) {
-  /* hero */
-  .hero-image {
-    width: 100%;
-    height: 100vh;
-  }
-  .hero-image img {
-    min-width: 100%;
-  }
-  /* cards */
-  #cards .cards-title {
-    font-size: 1.875rem /* 30px */;
-    margin-top: 6rem;
-    margin-bottom: 2.5rem;
-  }
-  #cards .cards-wrapper {
-    max-width: 1200px;
-  }
+.detail-restaurant .detail-info h4 {
+  margin: 8px 0;
+}
+.detail-restaurant .detail-info h3 {
+  color: var(--primary-color);
+  margin-bottom: 0.5rem;
+}
+.detail-restaurant .detail-overview h3 {
+  color: var(--primary-color);
+  margin-bottom: 0.5rem;
+}
+.detail-restaurant .detail-overview .name {
+  font-weight: bold;
+}
+.detail-restaurant .detail-title {
+  color: var(--primary-color);
 }
