--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,105 +9,22 @@
       name="description"
       content="Web app yang memberikan solusi mencari restoran berkualitas di Indonesia"
     />
-    <title>FoodFinder/></title>
+    <link rel="manifest" href="./app.webmanifest" />
+    <meta name="theme-color" content="#14b8a6" />
+    <link rel="icon" href="../public/images/icons/icon-512x512.png" />
+    <title>FoodFinder/> | Noprizal</title>
   </head>
   <body>
-    <a href="#cards" id="skip">Skip to Content</a>
-    <div class="wrapper">
-      <!-- NAVBAR START -->
-      <header id="navbar">
-        <div class="container">
-          <!-- col 1, brand -->
-          <div class="brand">
-            <a href="#">FoodFinder/></a>
-          </div>
-          <!-- col 2, navigasi menu -->
-          <div class="hamburger-menu">
-            <button
-              id="hamburger"
-              name="hamburger"
-              type="button"
-              aria-label="open hamburger menu"
-            >
-              <span></span>
-              <span></span>
-              <span></span>
-            </button>
-            <!-- float nav-menu -->
-            <nav id="nav-menu" class="hidden">
-              <ul>
-                <li><a href="/" class="home">Home</a></li>
-                <li><a href="#" class="favorite">Favorite</a></li>
-                <li>
-                  <a
-                    href="https://www.linkedin.com/in/noprizal"
-                    target="_blank"
-                    class="aboutus"
-                    rel="noreferrer"
-                    >About Us</a
-                  >
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-      </header>
-      <!-- NAVBAR END -->
+    <skip-to-content></skip-to-content>
 
-      <!-- HERO START -->
-      <section id="hero">
-        <div class="container">
-          <div class="hero-image">
-            <img
-              tabindex="0"
-              src="images/heros/hero-image_1.jpg"
-              alt="hero image"
-            />
-          </div>
-        </div>
-      </section>
-      <!-- HERO END -->
+    <navbar-element></navbar-element>
 
-      <!-- CARDS START -->
-      <section id="cards">
-        <div class="container">
-          <h2 class="cards-title" tabindex="0">Explore Restaurant</h2>
-          <div class="cards-wrapper"></div>
-        </div>
-      </section>
-      <!-- CARDS END -->
+    <hero-element></hero-element>
 
-      <!-- SHORTCUT TO TOP -->
-      <div class="to-top">
-        <a href="#">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="icon icon-tabler icon-tabler-arrow-up-circle"
-            width="48"
-            height="48"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="#64748b"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <circle cx="12" cy="12" r="9" />
-            <line x1="12" y1="8" x2="8" y2="12" />
-            <line x1="12" y1="8" x2="12" y2="16" />
-            <line x1="16" y1="12" x2="12" y2="8" />
-          </svg>
-        </a>
-      </div>
+    <content-element></content-element>
 
-      <!-- FOOTER START -->
-      <footer id="footer">
-        <div class="footer-title" tabindex="0">
-          Copyright &copy; 2022 - Noprizal
-        </div>
-      </footer>
-      <!-- FOOTER END -->
-    </div>
+    <shortcut-to-top-element></shortcut-to-top-element>
+
+    <footer-element></footer-element>
   </body>
 </html>
