--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -259,7 +259,7 @@ footer p a {
   justify-content: center;
   position: fixed;
   right: 1.1rem;
-  bottom: 3.9rem;
+  bottom: 1.5rem;
   background-color: transparent;
   backdrop-filter: blur(12px);
   border-radius: 50%;
@@ -326,4 +326,29 @@ footer p a {
 }
 .detail-restaurant .detail-title {
   color: var(--primary-color);
+  font-size: 1.1rem;
+}
+/* button */
+.like {
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #14b8a6;
+
+  position: fixed;
+  bottom: 6rem;
+  right: 16px;
+  border-radius: 50%;
+  border: 0;
+
+  font-size: 18px;
+  color: white;
+  cursor: pointer;
+}
+/* favorite heading */
+.favorite_heading {
+  color: #14b8a6;
+  text-align: left;
 }
