--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="./app.webmanifest" />
     <meta name="theme-color" content="#14b8a6" />
     <link rel="icon" href="../public/images/icons/icon-512x512.png" />
+    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
     <title>FoodFinder/> | Noprizal</title>
   </head>
   <body>
