--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,12 @@
     <link rel="manifest" href="./app.webmanifest" />
     <meta name="theme-color" content="#14b8a6" />
     <link rel="icon" href="../public/images/icons/icon-512x512.png" />
-    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
+    <!-- <script src="https://use.fontawesome.com/b070c8f1df.js"></script> -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      crossorigin="anonymous"
+    />
     <title>FoodFinder/> | Noprizal</title>
   </head>
   <body>
