--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -356,3 +356,36 @@ a.resto-name {
   min-width: 44px;
   min-height: 44px;
 }
+/* input review */
+#input-name,
+#input-review {
+  margin-bottom: 0.7rem;
+  padding: 0.4rem;
+  border-radius: 5px;
+}
+#button-review {
+  padding: 1em 2.7em;
+  font-size: 9px;
+  text-transform: uppercase;
+  letter-spacing: 1.6px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+#button-review:hover {
+  background-color: #23c483;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+#button-review:active {
+  transform: translateY(-1px);
+}
