--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -162,6 +162,10 @@ button span:nth-child(3) {
   width: 100%;
   height: 100%;
 }
+.hero-image source {
+  width: 100%;
+  height: 100%;
+}
 
 /* cards */
 #cards .cards-title {
