--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -150,6 +150,7 @@ button span:nth-child(3) {
 /* hero */
 #hero {
   margin-top: 3.1rem;
+  width: 100%;
 }
 .container {
   width: 100%;
@@ -294,7 +295,8 @@ footer p {
 }
 /* detail-movie */
 .detail-restaurant {
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   max-width: 800px;
   display: grid;
@@ -363,11 +365,13 @@ a.resto-name {
 /* input review */
 #input-name,
 #input-review {
+  min-height: 44px;
   margin-bottom: 0.7rem;
   padding: 0.4rem;
   border-radius: 5px;
 }
 #button-review {
+  min-height: 44px;
   padding: 1em 2.7em;
   font-size: 9px;
   text-transform: uppercase;
